<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1A4973"
    android:orientation="vertical">

    <EditText
        android:id="@+id/nameField"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginTop="50dp"
        android:hint="@string/name"
        android:textColor="#FFF"
        android:textColorHint="#DDFFFFFF" />

    <EditText
        android:id="@+id/addressField"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/new_address"
        android:textColor="#FFF"
        android:textColorHint="#DDFFFFFF"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:textColor="#FFF"
        android:textColorHint="#DDFFFFFF"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/passwordFieldRetype"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/retype_password"
        android:inputType="textPassword"
        android:textColor="#FFF"
        android:textColorHint="#DDFFFFFF"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:text="@string/save"
        android:fontFamily="@font/rasa_bold"
        android:background="@drawable/button"
        android:textColor="#FFFFFF"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/uploadBtn"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:fontFamily="@font/rasa_bold"
        android:text="@string/upload_new_pro_pic"
        android:layout_gravity="center" />


</LinearLayout>