<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#1A4973"
    tools:context="com.example.bookx.SignupPage">

    <TextView
        android:id="@+id/signup_tv"
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:layout_gravity="center"
        android:layout_marginTop="30sp"
        android:layout_marginBottom="20sp"
        android:layout_weight="0.5"
        android:fontFamily="@font/rasa_bold"
        android:text="@string/sign_up_for_bookx"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/intro_tv"
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:layout_gravity="center"
        android:layout_margin="20sp"
        android:layout_weight="0.5"
        android:fontFamily="@font/rasa_regular"
        android:text="@string/create_a_profile_connect_with_fellow_students_in_your_university_to_join_our_community"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:layout_gravity="center"
        android:layout_weight="0.5"
        android:fontFamily="@font/rasa_regular"
        android:text="@string/name"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/name_et"
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:layout_weight="0.5"
        android:layout_marginBottom="10sp"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textPersonName"
        android:fontFamily = "@font/rasa_regular"
        android:text="" />

    <TextView
        android:id="@+id/email_tv2"
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:layout_gravity="center"
        android:layout_weight="0.5"
        android:fontFamily="@font/rasa_regular"
        android:text="@string/email"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/email_et"
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:layout_weight="0.5"
        android:layout_marginBottom="10sp"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textPersonName"
        android:fontFamily = "@font/rasa_regular"
        android:text="" />

    <TextView
        android:id="@+id/pw_tv"
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:layout_gravity="center"
        android:layout_weight="0.5"
        android:fontFamily="@font/rasa_regular"
        android:text="@string/password"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/pw_et"
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:layout_weight="0.5"
        android:layout_marginBottom="10sp"
        android:layout_gravity="center"
        android:ems="10"
        android:fontFamily = "@font/rasa_regular"
        android:inputType="textPersonName"
        android:text="" />

    <TextView
        android:id="@+id/address_tv"
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:layout_gravity="center"
        android:layout_weight="0.5"
        android:fontFamily="@font/rasa_regular"
        android:text="@string/address"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/address_et"
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:layout_weight="0.5"
        android:layout_marginBottom="20sp"
        android:layout_gravity="center"
        android:textColor = "#FFFFFF"
        android:ems="10"
        android:inputType="textPersonName"
        android:fontFamily = "@font/rasa_regular"
        android:text="" />

    <Button
        android:id="@+id/upload_pic_btn"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10sp"
        android:background="@android:drawable/stat_sys_upload" />

    <TextView
        android:id="@+id/uploadpic_tv"
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:layout_gravity="center"
        android:layout_weight="0.5"
        android:fontFamily="@font/rasa_regular"
        android:text="@string/upload_your_profile_picture"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:layout_gravity="center"
        android:layout_marginBottom="50sp"
        android:layout_weight="0.5"
        android:background="@drawable/button"
        android:fontFamily="@font/rasa_regular"
        android:text="@string/sign_up" />

    <!--    <Button-->
<!--        android:id="@+id/verification_btn"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="0sp"-->
<!--        android:layout_weight="1"-->
<!--        android:layout_gravity="center"-->
<!--        android:fontFamily = "@font/rasa_regular"-->
<!--        android:text="verify" />-->
</LinearLayout>

