<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="#1A4973"
    tools:context=".ListingPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:layout_weight="2">
        </TextView>

        <TextView
            android:id="@+id/listing_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rasa_bold"
            android:text="@string/new_listing"
            android:textColor="#FFFFFF"
            android:textSize="25dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:layout_weight="2">
        </TextView>


        <Button
            android:id="@+id/post_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:fontFamily="@font/rasa_bold"
            android:text="@string/post"
            android:textColor="#FFFFFF" />


    </LinearLayout>


    <EditText
        android:id="@+id/bookname_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_weight="1"
        android:fontFamily="@font/rasa_regular"
        android:textAlignment="center"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHint="#DDFFFFFF"
        android:layout_marginTop = "10dp"
        android:hint="@string/book_name" />

    <EditText
        android:id="@+id/isbn_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_weight="1"
        android:fontFamily="@font/rasa_regular"
        android:hint="@string/isbn_number"
        android:inputType="text"
        android:textColorHint="#DDFFFFFF"
        android:textAlignment="center"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/uploadisbn_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button"
        android:fontFamily="@font/rasa_bold"
        android:text="@string/upload"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/class_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_weight="1"
        android:fontFamily="@font/rasa_regular"
        android:hint="@string/class_name"
        android:inputType="text"
        android:textColorHint="#DDFFFFFF"
        android:textAlignment="center"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/price_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_weight="1"
        android:fontFamily="@font/rasa_regular"
        android:hint="@string/price"
        android:inputType="text"
        android:textColorHint="#DDFFFFFF"
        android:textAlignment="center"
        android:textColor="#FFFFFF" />


    <EditText
        android:id="@+id/description_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="50dp"
        android:layout_weight="1"
        android:fontFamily="@font/rasa_regular"
        android:hint="@string/description"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:textColorHint="#DDFFFFFF" />

    <Button
        android:id="@+id/upload_listing_pic_btn"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10sp"
        android:background="@android:drawable/stat_sys_upload" />

    <TextView
        android:id="@+id/upload_listing_pic_tv"
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:layout_weight="0.5"
        android:layout_gravity="center"
        android:fontFamily = "@font/rasa_regular"
        android:layout_marginBottom="30dp"
        android:text="Upload a picture for your listing!"
        android:textAlignment="center"
        android:textColor="#FFFFFF" />

</LinearLayout>
