<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="#1A4973"
    tools:context="com.example.bookx.AccountPage">

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:background="@drawable/round_button"
        android:fontFamily="@font/rasa_regular"
        android:text="@string/log_out"
        android:textColor="#FFFFFF" />

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher"/>
    <TextView
        android:id="@+id/name_tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily = "@font/rasa_regular"
        android:textColor="#FFFFFF"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="Jennifer Roh" />

    <TextView
        android:id="@+id/email_tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily = "@font/rasa_regular"
        android:textColor="#FFFFFF"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="smroh17@bu.edu" />

    <TextView
        android:id="@+id/address_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:fontFamily = "@font/rasa_regular"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="1 University Road, Boston, MA" />


    <Button
        android:id="@+id/changePW_btn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/rasa_bold"
        android:text="@string/change_password"
        android:textColor="#FFFFFF"
        android:textStyle="bold|italic" />


    <TextView
        android:id="@+id/listings_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:fontFamily="@font/rasa_regular"
        android:text="@string/your_listings"
        android:textColor="#FFFFFF" />

    <ListView
        android:id="@+id/lvAccountListing"
        android:listSelector="@drawable/listview_shape"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="10dp"
        android:layout_weight="6">

    </ListView>

</LinearLayout>